:sparkles: Article 추가

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
-
+.yml
+application.yml
+resources/application.yml
+src/main/resources/application.yml
 ### VS Code ###
 .vscode/
